--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,6 +7,8 @@
   <title>Tour of Heroes Juan Diego</title>
 </head>
 <body>
-  <h1>{{title}}</h1>
+  <h1>{{titulo}}</h1>
+  <app-heroes></app-heroes>
+  <app-mensajes></app-mensajes>
 </body>
 </html> 
